@@ -3,6 +3,7 @@
  * 	
  Copyright (C) 2003 Gilad Ben-Yossef <gilad@benyossef.com>
  Copyright (C) 2004 Codefidence Ltd. http://www.codefidence.com
+ Copyright (C) 2005 Ami Chayun <ami@beyondsecurity.com>
 
  This work is heavily based on the fileman.c example distributed with
  the GNU readline library and uses the library for all text lines
@@ -72,7 +73,7 @@
 #include <readline/history.h>
 #include "cfgsh.h"
 
-static char const rcsid[] = "(C) 2004 Codefidence Ltd. $Id$";
+static char const rcsid[] = "(C) 2005 Codefidence Ltd. $Id$";
 
 COMMAND root_commands[] = {
 
@@ -92,7 +93,7 @@ COMMAND root_commands[] = {
 };
 
 COMMAND network_commands[] = {
-  { "interface", com_int, "Enter interface configuration mode: interface [interface]", interface_completion_matches, NULL},
+  { "interface", com_int, "Set active network interfaces: interface [interface name]", interface_completion_matches, NULL},
   { "route", com_route, "Enter route configuration mode: route [priority]", NULL, NULL},
   { "default", com_gw, "Display or set default gateway address: gateway [address]", NULL, NULL},
   { "resolver", com_nameservers, "Enter domain name resolution configuration mode: resolver", NULL, NULL},
@@ -171,7 +172,11 @@ static int show_prompt = 1;
 /*                                                                  */
 /* **************************************************************** */
 
-
+/* A safe(r) replacement to strcmp (if used wisely) */
+inline int checkarg(const char *uarg, const char *carg)
+{
+  return (!strncmp(uarg, carg, strlen(carg) + 1));
+}
 /* Return the number of the current word in the command line */
 int word_num(int start, char * text)
 {
@@ -200,11 +205,16 @@ int word_num(int start, char * text)
 
 /* Set the prompt */
 void set_prompt(char * prompt_add) {
+#ifdef PROMPT_STRING
+char *prompt_string = PROMPT_STRING;
+#else
+char *prompt_string = conf->hostname;
+#endif
 
   if(prompt_add)
-    snprintf(prompt, PROMPT_SIZE, "%s %s%s", conf->hostname, prompt_add, PROMPT);
+    snprintf(prompt, PROMPT_SIZE, "%s %s%s", prompt_string, prompt_add, PROMPT);
   else
-    snprintf(prompt, PROMPT_SIZE, "%s%s", conf->hostname, PROMPT);
+    snprintf(prompt, PROMPT_SIZE, "%s%s", prompt_string, PROMPT);
 
   return;
 }
@@ -228,7 +238,6 @@ int init_config (int setup) {
   }
 
   if(setup)  {
-
     unsigned int i;
 
     memset(conf, 0, sizeof(CONF));
@@ -300,7 +309,7 @@ int find_ifs(void) {
 
   if(!( dev_file = fopen(PROC_NET_DEV, "r")))
     {
-      printf("Failed to open proc/net/dev file %s\n", strerror(errno));
+      printf("Failed to open %s file %s\n", PROC_NET_DEV, strerror(errno));
       exit(1);
     }
 
@@ -313,7 +322,7 @@ int find_ifs(void) {
  
     get_name(name, buf);
      
-    if(!strncmp(name, IFNAMEBASE, 3)) i++;
+    if( !strncmp(name, IFNAMEBASE, 3)) i++; /* Get only interfaces starting with 'eth' */
   }
 
   fclose(dev_file);
@@ -564,13 +573,13 @@ int write_resolver(char *ns1, char *ns2, char * search)
   
   fprintf(file, "; generated by %s\n", progname);
 
-  if(strncmp(search, "none", 5))
+  if(! checkarg(search, "none"))
     fprintf(file, "search %s\n", search);
 
-  if(strncmp(ns1, "none", 5))
+  if(! checkarg(ns1, "none"))
     fprintf(file, "nameserver %s\n", ns1);
 
-  if(strncmp(ns2, "none", 5))
+  if(! checkarg(ns2, "none"))
     fprintf(file, "nameserver %s\n", ns2);
   
   fclose(file);
@@ -633,7 +642,8 @@ usage(char * name) {
 
   printf("cfgsh - The Configuration Shell utility.\n"); 
   printf("Copyright 2002 Gilad Ben-Yossef <gilad@benyossef.com>\n"); 
-  printf("Copyright 2004 Codefidence Ltd. http://codefidence.con\n\n");
+  printf("Copyright 2005 Codefidence Ltd. http://codefidence.con\n\n");
+  printf("Copyright 2005 Ami Chayun <ami@beyondsecurity.com> \n\n");
   printf("Usage: %s [option]\n\n", name); 
   printf("Options:\n"); 
   printf("  setup  - Setup system on boot from configuration file.\n"); 
@@ -694,28 +704,27 @@ int main(int argc, char * argv[])
   char *line, *s;
   int ret;
   int setup = 0;
-
   progname = argv[0];
 
   initialize_readline();	/* Bind our completer. */
   
-  if((argc == 2) && (!strncmp(argv[1], "setup", 6)) ) {
+  if((argc == 2) && checkarg(argv[1], "setup") ) {
 
     setup = 1;
     show_prompt = 0;
 
-    if(!( rl_instream = fopen(CONFIG_PATH, "r")))
-      {
+    if( !(rl_instream = fopen(CONFIG_PATH, "r")) ) /* Set the input stream for readline */
+    {
 	printf("Failed to open config file %s\n", strerror(errno));
 	exit(1);
-      }
+    }
     
-  } else if ((argc == 2) && (!strncmp(argv[1], "clean", 6)) ) {    
+  } else if ((argc == 2) && checkarg(argv[1], "clean") ) {    
     
     setup = 1;
     show_prompt = 1;
 
-  } else if ((argc == 2) && (!strncmp(argv[1], "silent", 6)) ) {    
+  } else if ((argc == 2) && checkarg(argv[1], "silent") ) {    
     
     setup = 0;
     show_prompt = 0;
@@ -811,7 +820,7 @@ COMMAND * find_command (char *name)
   register int i;
 
   for (i = 0; commands[i].name; i++)
-    if (strncmp (name, commands[i].name, strlen(commands[i].name) + 1) == 0)
+    if ( checkarg(name, commands[i].name) )
       return (&commands[i]);
 
   return ((COMMAND *)NULL);
@@ -900,7 +909,7 @@ char ** path_completion_matches(const char * text, char * path, int start)
 
 char * interface_generator(const char *text, int state)
 {
-  static int list_index, len;
+  static int list_index;
 
   /* If this is a new word to complete, initialize now.  This includes
      saving the length of TEXT for efficiency, and initializing the index
@@ -908,7 +917,6 @@ char * interface_generator(const char *text, int state)
 
   if (!state) {
     list_index = 0;
-    len = strlen(text);
   }
 
   if(list_index < conf->num_ifs){
@@ -919,7 +927,7 @@ char * interface_generator(const char *text, int state)
     
     snprintf(if_name, IFNAMESIZ, "%s%d", IFNAMEBASE, list_index++);
 
-    if(strncmp(if_name, text, len) == 0) {
+    if( checkarg(if_name, text) ) {
       return if_name;
     }
     
@@ -934,7 +942,7 @@ char * interface_generator(const char *text, int state)
 
 char * opt_generator(char ** gen_options, const char *text, int state)
 {
-  static int list_index, len;
+  static int list_index;
   char * name;
 
   /* If this is a new word to complete, initialize now.  This includes
@@ -943,7 +951,6 @@ char * opt_generator(char ** gen_options, const char *text, int state)
 
   if (!state) {
     list_index = 0;
-    len = strlen(text);
   }
 
 
@@ -952,7 +959,7 @@ char * opt_generator(char ** gen_options, const char *text, int state)
     {
       list_index++;
 
-      if (strncmp (name, text, len) == 0)
+      if ( checkarg(name, text) )
         return (dupstr(name));
     }
 
@@ -1048,7 +1055,7 @@ char ** cfgsh_completion (const char *text, int start, int end)
 
     for (i = 0; commands[i].name; i++)
       {
-	if (!*cmd || (strncmp (cmd, commands[i].name, strlen(commands[i].name) + 1) == 0))
+	if (!*cmd || checkarg(cmd, commands[i].name) )
 	  {
 	    complete_func_t * func = commands[i].complete_func;
 
@@ -1076,7 +1083,7 @@ char ** cfgsh_completion (const char *text, int start, int end)
 
 char * command_generator(const char *text, int state)
 {
-  static int list_index, len;
+  static int list_index;
   char *name;
 
   /* If this is a new word to complete, initialize now.  This includes
@@ -1086,7 +1093,6 @@ char * command_generator(const char *text, int state)
   if (!state)
     {
       list_index = 0;
-      len = strlen (text);
     }
 
   /* Return the next name which partially matches from the command list. */
@@ -1094,7 +1100,7 @@ char * command_generator(const char *text, int state)
     {
       list_index++;
 
-      if (strncmp (name, text, len) == 0)
+      if ( checkarg(name, text) )
         return (dupstr(name));
     }
 
@@ -1105,9 +1111,7 @@ char * command_generator(const char *text, int state)
 int getifr(char * arg, char * ifrname, unsigned int * ifr)
 {
 
-  int i = 0;
-
-  while (arg[i] && whitespace (arg[i])) i++;
+  arg = stripwhite(arg);
 
   if(sscanf(arg, IFNAMEBASE "%d", ifr) != 1) {
    return EINVAL;
@@ -1139,7 +1143,7 @@ int com_ip (char *arg)
   
   if (*arg) {
 
-    if(!strncmp(arg, "none",5)) {
+    if( checkarg(arg, "none") ) {
       strncpy(conf->ip[current_ifr], "none", IPQUADSIZ);
 
     } else if((ret = set_if_address(ifrname, arg, SET_ADDRESS, conf->ip[current_ifr]))) {
@@ -1158,7 +1162,7 @@ int com_ip (char *arg)
     /* broadcast may be automatic, in which case we need to run
        the auto code, otherwise, just do same as with netmask */
 
-    if(!strncmp(conf->bcast[current_ifr], "auto", 5)) {
+    if( checkarg(conf->bcast[current_ifr], "auto") ) {
       auto_broadcast(current_ifr);
     } else {
       set_if_address(ifrname, conf->bcast[current_ifr], SET_BROADCAST, ip);
@@ -1189,7 +1193,7 @@ int com_netmask (char *arg)
   
   if (*arg) {
     
-    if(!strncmp(arg, "none", 5)) {
+    if( checkarg(arg, "none") ) {
       strncpy(conf->nmask[current_ifr], "none", IPQUADSIZ);
 
     } else if((ret = set_if_address(ifrname, arg, SET_NETMASK, conf->nmask[current_ifr]))) {
@@ -1198,7 +1202,7 @@ int com_netmask (char *arg)
     }
 
     /* if broadcast is set automatic, adapt to new netmask */
-    if(!strncmp(conf->bcast[current_ifr], "auto", 5)) {
+    if( checkarg(conf->bcast[current_ifr], "auto") ) {
       auto_broadcast(current_ifr);
     }
 
@@ -1232,11 +1236,11 @@ int com_broadcast (char *arg)
 
   if (*arg) {
     
-    if(!strncmp(arg, "none", 5)) {
+    if( checkarg(arg, "none") ) {
 
       strncpy(conf->bcast[current_ifr], "none", IPQUADSIZ);
 
-    } else if(!strncmp(arg, "auto", 5)) {
+    } else if( checkarg(arg, "auto") ) {
 
       strncpy(conf->bcast[current_ifr], "auto", IPQUADSIZ);
       auto_broadcast(current_ifr);
@@ -1277,7 +1281,7 @@ int com_show(char * arg)
   
   if (*arg) {
     
-    if(!strncmp(arg, SHOW_OPT_INTERFACES, sizeof(SHOW_OPT_INTERFACES))) {
+    if( checkarg(arg, SHOW_OPT_INTERFACES) ) {
       
       for(i=0; i<conf->num_ifs; i++) {
 	current_ifr=i;
@@ -1291,7 +1295,7 @@ int com_show(char * arg)
       return 0;
     }
        
-    if(!strncmp(arg, SHOW_OPT_ROUTES, sizeof(SHOW_OPT_ROUTES))) {
+    if( checkarg(arg, SHOW_OPT_ROUTES) ) {
 
       for(i=0; i<ROUTE_NUM; i++) {
 	current_route=i;
@@ -1302,7 +1306,7 @@ int com_show(char * arg)
     }
 
 
-    if(!strncmp(arg, SHOW_OPT_RESOLVER, sizeof(SHOW_OPT_RESOLVER))) {
+    if( checkarg(arg, SHOW_OPT_RESOLVER) ) {
 
       com_ns("");
       com_ns2("");
@@ -1311,7 +1315,7 @@ int com_show(char * arg)
       return 0;
     }
     
-    if(!strncmp(arg, SHOW_OPT_CONFIG, sizeof(SHOW_OPT_CONFIG))) {
+    if( checkarg(arg, SHOW_OPT_CONFIG) ) {
 	    
       dump_config(stdout);
       
@@ -1418,7 +1422,7 @@ int com_ns (char *arg)
     struct in_addr inp;
     char new_ns[IPQUADSIZ];
     
-    if(!strncmp(arg, "none", 5)) {
+    if( checkarg(arg, "none") ) {
       
       strncpy(new_ns, "none", IPQUADSIZ);
       
@@ -1467,7 +1471,7 @@ int com_ns2 (char *arg)
     struct in_addr inp;
     char new_ns[IPQUADSIZ];
     
-    if(!strncmp(arg, "none", 5)) {
+    if( checkarg(arg, "none") ) {
       
       strncpy(new_ns, "none", IPQUADSIZ);
       
@@ -1556,7 +1560,7 @@ int com_del_route (char *arg)
   if(!target_s)
     goto noarg;
 
-  if(!strncmp(target_s, "none", 4)) {
+  if( checkarg(target_s, "none") ) {
     return 0;
   }
   
@@ -1660,7 +1664,7 @@ int com_set_route (char *arg)
   if(!target_s)
     goto noarg;
 
-  if(!strncmp(target_s, "none", 4)) {
+  if( checkarg(target_s, "none") ) {
     return com_del_route("");
   }
   
@@ -1762,7 +1766,7 @@ int com_gw (char *arg)
     
   }
 
-  none = (!strncmp(arg, "none", 5));
+  none = ( checkarg(arg, "none") );
 
   deladdr.sin_family = sockaddr.sin_family = AF_INET;
   sockaddr.sin_port = 0;
@@ -1828,7 +1832,7 @@ int com_dhcp (char *arg)
     goto out;
   }
 
-  if(strncmp(arg, DHCP_OPT_ON, sizeof(DHCP_OPT_ON)) == 0) {
+  if( checkarg(arg, DHCP_OPT_ON) ) {
 
     char *cmd[4] = { DHCPCD_START_PATH , ifrname, conf->hostname  , NULL};
 
@@ -1853,7 +1857,7 @@ int com_dhcp (char *arg)
   }
   
 
-  if(strncmp(arg, DHCP_OPT_IPONLY, sizeof(DHCP_OPT_IPONLY)) == 0) {
+  if( checkarg(arg, DHCP_OPT_IPONLY) ) {
 
     char *cmd[4] = { DHCPCD_IPONLY_PATH , ifrname, conf->hostname, NULL};
 
@@ -1875,7 +1879,7 @@ int com_dhcp (char *arg)
     goto out;
   }
 
-  if(strncmp(arg, DHCP_OPT_OFF, sizeof(DHCP_OPT_OFF)) == 0) {
+  if( checkarg(arg, DHCP_OPT_OFF) ) {
 
     char *cmd[3] = { DHCPCD_STOP_PATH, ifrname, NULL};
       
@@ -1948,10 +1952,9 @@ int com_help (char *arg)
 {
   register int i;
   int printed = 0;
-
   for (i = 0; commands[i].name; i++)
     {
-      if (!*arg || (strncmp (arg, commands[i].name, strlen(commands[i].name) + 1) == 0))
+      if (!*arg || checkarg(arg, commands[i].name) )
         {
           printf ("%10s  %s.\n", commands[i].name, commands[i].doc);
           printed++;
@@ -2045,20 +2048,20 @@ int com_int (char *arg)
 {
 
   char tmp[PROMPT_SIZE];
-
+                                                                                                                             
   arg = stripwhite(arg);
-  
+                                                                                                                             
   if (!*arg) {
-
+                                                                                                                             
     printf ("Please supply an interface name. Press TAB to get a list of available ones.\n");
     return 1;
   }
-
+                                                                                                                             
   if(getifr(arg, ifrname, &current_ifr)) {
     printf("No such interface %s\n.", arg);
     return 1;
   }
-
+                                                                                                                             
   commands = interface_commands;
   snprintf(tmp, PROMPT_SIZE, "(network interface %s)", ifrname);
   set_prompt(tmp);
@@ -2132,7 +2135,7 @@ int com_hostname (char *arg)
     return 1;
   }
   
-  snprintf(conf->hostname, size, arg); 
+  snprintf(conf->hostname, HOST_NAME_MAX - 1, arg); 
 
   return (0);
 }
